# llm-systems-engineering

./: .gitignore  README.md  pyproject.toml
agentic-workflow/: weather-agent.ipynb
fine-tuning-qlora/: lora-dialogsum.ipynb
rag/: chess_rag.ipynb
rag/kb/: alekhines_defence.txt  benko_gambit.txt  benoni_defense.txt  birds_opening.txt  bogo-indian_defense.txt  caro-kann_defence.txt  catalan_opening.txt  chess_opening.txt  closed_game.txt  dutch_defense.txt  english_opening.txt  flank_opening.txt  four_knights_game.txt  french_defence.txt  grunfeld_defence.txt  italian_game.txt  kings_indian_defence.txt  kings_pawn_game.txt  list_of_chess_openings.txt  london_system.txt  modern_defense.txt  nimzo-indian_defense.txt  open_game.txt  pirc_defence.txt  queens_gambit.txt  queens_indian_defence.txt  queens_pawn_game.txt  r%c3%a9ti_opening.txt  ruy_lopez.txt  scandinavian_defense.txt  scotch_game.txt  semi-open_game.txt  semi-slav_defense.txt  sicilian_defence.txt  slav_defense.txt  vienna_game.txt
